[package]
name = "sapp-jsutils"
version = "0.1.0"
authors = ["not-fl3 <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/not-fl3/sapp-jsutils"
repository = "https://github.com/not-fl3/sapp-jsutils"
description = """
Helper functions for working with js objects in miniquad based apps.
"""

[dependencies]

